--- a/.github/workflows/plugins_verification.yml
+++ b/.github/workflows/plugins_verification.yml
@@ -6,7 +6,7 @@ jobs:
   dexed_vst:
     strategy:
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest,]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
@@ -23,6 +23,22 @@ jobs:
         sudo installer -pkg dexed/dexed-0.9.4-osx.mpkg -target /
         curl -L "https://github.com/Tracktion/pluginval/releases/download/latest_release/pluginval_macOS.zip" -o pluginval.zip
         unzip pluginval.zip -d pluginval
+    - name: Install dexed and pluginval (Linux)
+      if: runner.os	== 'Linux'
+      run: |
+        curl -L "https://github.com/asb2m10/dexed/releases/download/v0.9.4hf1/dexed-0.9.4.lnx.zip" -o dexed.zip
+        unzip dexed.zip -d dexed
+        curl -L "https://github.com/Tracktion/pluginval/releases/download/latest_release/pluginval_Linux.zip" -o pluginval.zip
+        unzip pluginval.zip -d pluginval
+        sudo apt-get update
+        sudo apt-get install -y libgconf-2-4 libcurl3
+    - name: Runs pluginval on Dexed (Linux)
+      if: runner.os	== 'Linux'
+      run: |
+        mkdir build
+        cd build
+        chmod 777 $GITHUB_WORKSPACE/pluginval/pluginval
+        cmake -DPLUGINVAL_LOCATION="$GITHUB_WORKSPACE/pluginval" -DVST_LOCATION="$GITHUB_WORKSPACE/dexed/Dexed.so" -DTEST_LEVEL=7 ../tst/plugin_verification/
     - name: Runs pluginval on Dexed (MacOs)
       if: runner.os	== 'macOS'
       run: |
