--- a/.github/workflows/plugins_verification.yml
+++ b/.github/workflows/plugins_verification.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        # cmake -DPLUGINVAL_LOCATION="$GITHUB_WORKSPACE/pluginval/pluginval.app/Contents/MacOs" -DVST_LOCATION="/Library/Audio/Plug-ins/VST/Dexed.vst" -DTEST_LEVEL=10 ../tst/plugin_verification/
+        cmake -DPLUGINVAL_LOCATION="$GITHUB_WORKSPACE/pluginval/pluginval.app/Contents/MacOs" -DVST_LOCATION="/Library/Audio/Plug-ins/VST/Dexed.vst" -DTEST_LEVEL=10 ../tst/plugin_verification/
     - name: Runs pluginval on Dexed (Windows)
       if: runner.os	== 'Windows'
       run: |
